Added link to open-source code on github

--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
             </div>
           </div>
         </div>
+        <small
+          ><a href="https://github.com/yuliiazubenko/app" target="_blank"
+            >Open-source code</a
+          >, by Yuliia Zubenko</small
+        >
       </div>
     </div>
     <script src="src/index.js"></script>
