--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
           <div class="row">
             <div class="col-3">
               <h1 id="city"></h1>
-              <p id="date"></p>
+              <ul>
+                <li id="date"></li>
+                <li id="description"></li>
+              </ul>
             </div>
 
             <div class="col-3">
-              <span class="temperature" id="temperature"></span>
+              <strong class="temperature" id="temperature"></strong>
               <span class="units">°C</span>
-              <span id="description"></span>
             </div>
 
             <div class="col-4">
