Added dinamic icon from the API

--- a/index.html
+++ b/index.html
@@ -53,21 +53,22 @@
 
         <div class="city-border">
           <div class="overwiew">
-          <h1 id="city"></h1>
-          <ul>
+           <h1 id="city"></h1>
+           <ul>
             <li id="date"></li>
             <li id="description"></li>
-          </ul>
+           </ul>
           </div>
 
           <div class="row">
             <div class="col-6">
-              <img src="images/sun.png" class="icon" alt="sun">
-              <div class="float-left">
-              <strong class="temperature" id="temperature"></strong>
-              <span class="units">°C</span>
+              <div class="weather-temperature">
+                <img src="" class="icon" id="icon">
+                <div class="float-left">
+                  <strong class="temperature" id="temperature"></strong>
+                  <span class="units">°C</span>
+                </div>
               </div>
-              
             </div>
 
             <div class="col-6">
@@ -90,6 +91,7 @@
                 Tue
               </p>
             </div>
+
             <div class="col">
               <img src="images/cloud.png" alt="cloud" class="icon" />
               <p>
@@ -97,6 +99,7 @@
                 Wed
               </p>
             </div>
+
             <div class="col">
               <img src="images/sun.png" alt="sun" class="icon" />
               <p>
@@ -104,6 +107,7 @@
                 Thu
               </p>
             </div>
+
             <div class="col">
               <img src="images/cloudy.png" alt="cloudy" class="icon" />
               <p>
@@ -111,6 +115,7 @@
                 Fri
               </p>
             </div>
+
             <div class="col">
               <img src="images/night.png" alt="night" class="icon" />
               <p>
