Added the unit conversion

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <img src="" class="icon" id="icon">
                 <div class="float-left">
                   <strong class="temperature" id="temperature"></strong>
-                  <span class="units">°C</span>
+                  <span class="units"> <a href ="#" id="celsius-link" class="active">°C</a>|<a href="#" id="fahrenheit-link">°F</a></span>
                 </div>
               </div>
             </div>
