--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <img src="" class="icon" id="icon">
                 <div class="float-left">
                   <strong class="temperature" id="temperature"></strong>
-                  <span class="units"> <a href ="#" id="celsius-link" class="active">°C</a>|<a href="#" id="fahrenheit-link">°F</a></span>
+                  <span class="units">°C</span>
                 </div>
               </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="col-6">
               <ul class="weather-description">
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span>km\h</li>
+                <li>Wind: <span id="wind"></span>m\h</li>
               </ul>
             </div>
           </div>
